# d365-field-service-mcp-server

./: .dockerignore  .env.template  .gitignore  Dockerfile  Dockerfile.rest-api  README.md  azure-api-url.txt  azure-mcp-url.txt  deploy-fixed-server.ps1  deploy-mcp-http.ps1  deploy-to-azure-v2.ps1  deploy-to-azure.ps1  docker-helper.sh  nginx.conf  pyproject.toml  supervisord.conf  update-env-vars.ps1
src/mcp_d365fs_server/: __init__.py  auth.py  create-mcp-config.ps1  d365_client.py  rest_api.py  server.py
tests/: __init__.py
